--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 
 # Website settings
 title: "G"
-description: "Jack's blog,use Jekyll and github pages."
-keywords: "Jack,Jalpc,blog,Jekyll,github,gh-pages"
+description: "Gaurav's blog"
+keywords: "Gaurav's blog"
 baseurl: "/"
-url: "http://gauravnagar.me"
+url: "http://gauravnagar19.github.io"
 # url: "http://127.0.0.1:4000"
 
 # author
