--- a/_config.yml
+++ b/_config.yml
@@ -10,12 +10,12 @@ url: "http://gauravnagar19.github.io"
 
 # author
 author:
-  name: 'Jack'
-  first_name: 'Jia'
-  last_name: 'Kun'
-  email: 'me@jack003.com'
-  facebook_username: 'jiakunnj'
-  github_username: 'JiaKunUp'
+  name: 'Gaurav'
+  first_name: 'Gaurav'
+  last_name: 'Nagar'
+  email: 'XXXX.com'
+  facebook_username: 'gauravnagar19'
+  github_username: 'gauravnagar19'
   avatar: 'static/img/landing/Jack.jpg'
   desc: 'I am a Full Stack engineer with website development, automation Ops and writing scripts experience. Life is a continuous learning process, so work makes me more rigorous, travel makes my life more colorful. I can make lots of friends when I coding and travel.'
 
