--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ title: "G"
 description: "Gaurav's blog"
 keywords: "Gaurav's blog"
 baseurl: "/"
-url: "gauravnagar19.github.io"
+url: "http://gauravnagar19.github.io"
 # url: "http://127.0.0.1:4000"
 
 # author
