--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Welcome to Jekyll!
 
 # Website settings
-title: "G"
+title: "Gaurav"
 description: "Gaurav's blog"
 keywords: "Gaurav's blog"
 baseurl: "/"
