--- a/_data/careers.yml
+++ b/_data/careers.yml
@@ -1,51 +1,51 @@
 # careers section data
 - name:
-    detail: Nextcode
-    i18n: nextcode
+    detail: Graduation
+    i18n: college
   desc:
-    detail: Now I am in Nextcode and develop website with Python code for genetic analysis.
-    i18n: nextcode_des
+    detail: Pursuing Masters in Busniesss Analytics & Information System from University of South Florida.
+    i18n: college_des
   date:
-    detail: Apr. 2016
-    i18n: nextcode_date
+    detail: Aug. 2016
+    i18n: college_date
   job:
-    detail: Python Developer
-    i18n: nextcode_job
-  icon: fa-plus-square
+    detail: Student
+    i18n: college_job
+  icon: fa-book
 
 - name:
-    detail: Netease Game
-    i18n: netease
+    detail: Capgemini
+    i18n: capgemini
   desc:
-    detail: In Netease game, I learned game service system and use Python code for ops.
-    i18n: netease_des
+    detail: Started focusing on BI Reporting in Oracle R12 and Oracle HCM Cloud.
+    i18n: capgemini_des
   date:
-    detail: Jun. 2015
-    i18n: nextcode_date
+    detail: Jan. 2014
+    i18n: capgemini_date
   job:
-    detail: Dev Ops
-    i18n: netease_job
-  icon: fa-gamepad
+    detail: BI Reporting
+    i18n: capgemini_job
+  icon: fa-cloud
 
 - name:
-    detail: Ucloud
-    i18n: ucloud
+    detail: Capgemini
+    i18n: capgemini
   desc:
-    detail: In ucloud, I started to deal with servers and Linux system and use shell scripts to manage massive server.
-    i18n: ucloud_des
+    detail: In Capgemini, I started working as Oracle Technical Consultant mainly focused on ETL (Data Migration).
+    i18n: capgemini_des
   date:
-    detail: Sep. 2013
-    i18n: ucloud_date
+    detail: Oct. 2012
+    i18n: capgemini_date
   job:
-    detail: Dev Ops
-    i18n: ucloud_job
+    detail: Data Analysis and Migration (ETL)
+    i18n: capgemini_job
   icon: fa-cloud
 
 - name:
     detail: Graduation
     i18n: college
   desc:
-    detail: At July 2013,I graduated from college and started my IT technology tour.
+    detail: At July 2012,I graduated from college and started my IT technology tour.
     i18n: college_des
   date:
     detail: Jul. 2013
