--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -5,8 +5,8 @@
   img: 'static/img/landing/saplatform.png'
   desc: 'Designed, configured, implemented and deployed a complete bare bone E-commerce solution over a distributed big data environment'
 
-- name: 'Jalpc'
-  i18n: 'jalpc'
-  url: '/JiaKunUp/jalpc_jekyll_theme'
-  img: 'static/img/landing/jekyll.png'
-  desc: "Jalpc is a simple, beautiful and swift theme for Jekyll. It has comprehensive function, it can be easily used and edited. It's adapted for many kinds devices."
+#- name: 'Jalpc'
+#  i18n: 'jalpc'
+#  url: '/JiaKunUp/jalpc_jekyll_theme'
+#  img: 'static/img/landing/jekyll.png'
+#  desc: "Jalpc is a simple, beautiful and swift theme for Jekyll. It has comprehensive function, it can be easily used and edited. It's adapted for many kinds devices."
