--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,8 +1,8 @@
 # projects section data
 - name: 'Designing Standalone E-commerce Website over Cloud (Azure Web Services) using Scalable Distributed Architecture'
   i18n: 'ecomazure'
-  url: '/projects/ecomazure'
-  img: 'static/img/landing/saplatform.png'
+  url: '/gauravnagar19/EcomApp'
+  img: 'static/img/landing/ecomm.jpg'
   desc: 'Designed, configured, implemented and deployed a complete bare bone E-commerce solution over a distributed big data environment'
 
 #- name: 'Jalpc'
