--- a/_data/landing.yml
+++ b/_data/landing.yml
@@ -26,7 +26,7 @@
 - id: 'blog'
   i18n: 'nav.blog'
   name: 'Blog'
-  tpl: 'blog.html'
+  tpl: 'about.html'
   css: 'testimonials navy-section'
 
 #- id: 'links'
