--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ author:
   facebook_username: 'gauravnagar19'
   github_username: 'gauravnagar19'
   avatar: 'static/img/landing/gauravnagarphoto.jpg'
-  desc: 'I am a Oracle Technical Consultant with data migration, reporting and scripting experience. Life is a continuous learning process, so work makes me more rigorous, travel makes my life more colorful. I can make lots of friends when I coding and travel.'
+  desc: 'I am a Oracle Technical Consultant with data migration, reporting and scripting experience.'
 
 # comment
 changyan:
