--- a/_data/careers.yml
+++ b/_data/careers.yml
@@ -6,18 +6,32 @@
     detail: Pursuing Masters in Busniesss Analytics & Information System from University of South Florida.
     i18n: college_des
   date:
-    detail: Aug. 2016
+    detail: Dec. 2017 (Expected)
     i18n: college_date
   job:
     detail: Student
     i18n: college_job
   icon: fa-book
 
-- name:
-    detail: Capgemini
+ - name:
+    detail: Consultant - Capgemini
     i18n: capgemini
   desc:
-    detail: Started focusing on BI Reporting in Oracle R12 and Oracle HCM Cloud.
+    detail: Developing BI Reporting in Oracle HCM Cloud.
+    i18n: capgemini_des
+  date:
+    detail: Jan. 2015
+    i18n: capgemini_date
+  job:
+    detail: BI Reporting
+    i18n: capgemini_job
+  icon: fa-cloud
+  
+- name:
+    detail: Senior Software Engineer - Capgemini
+    i18n: capgemini
+  desc:
+    detail: Started focusing on BI Reporting and Oracle Web Pages in Oracle R12.
     i18n: capgemini_des
   date:
     detail: Jan. 2014
@@ -28,7 +42,7 @@
   icon: fa-cloud
 
 - name:
-    detail: Capgemini
+    detail: Software Engineer - Capgemini
     i18n: capgemini
   desc:
     detail: In Capgemini, I started working as Oracle Technical Consultant mainly focused on ETL (Data Migration).
@@ -42,13 +56,13 @@
   icon: fa-cloud
 
 - name:
-    detail: Graduation
+    detail: Undergraduate education
     i18n: college
   desc:
-    detail: At July 2012,I graduated from college and started my IT technology tour.
+    detail: At July 2012, I graduated from college and started my IT technology tour.
     i18n: college_des
   date:
-    detail: Jul. 2013
+    detail: Jul. 2012
     i18n: college_date
   job:
     detail: Student
