--- a/_data/careers.yml
+++ b/_data/careers.yml
@@ -28,7 +28,7 @@
   icon: fa-cloud
 
 - name:
-    detail: Capgemini
+    detail: Capgemini - Software Engineer
     i18n: capgemini
   desc:
     detail: In Capgemini, I started working as Oracle Technical Consultant mainly focused on ETL (Data Migration).
