--- a/_data/careers.yml
+++ b/_data/careers.yml
@@ -14,7 +14,7 @@
   icon: fa-book
 
 - name:
-    detail: Capgemini
+    detail: Capgemini - Senior Software Engineer
     i18n: capgemini
   desc:
     detail: Started focusing on BI Reporting in Oracle R12 and Oracle HCM Cloud.
