--- a/_data/careers.yml
+++ b/_data/careers.yml
@@ -12,7 +12,21 @@
     detail: Student
     i18n: college_job
   icon: fa-book
-
+  
+- name:
+    detail: Capgemini - Consulant
+    i18n: capgemini
+  desc:
+    detail: Developing BI Reports, interfaces, extensions in Oracle R12 and creating data loaders and OTBI reports in Oracle HCM Cloud.
+    i18n: capgemini_des
+  date:
+    detail: Jan. 2014
+    i18n: capgemini_date
+  job:
+    detail: BI Reporting & Data Loaders
+    i18n: capgemini_job
+  icon: fa-cloud
+  
 - name:
     detail: Capgemini - Senior Software Engineer
     i18n: capgemini
