--- a/_data/careers.yml
+++ b/_data/careers.yml
@@ -6,7 +6,7 @@
     detail: Pursuing Masters in Busniesss Analytics & Information System from University of South Florida.
     i18n: college_des
   date:
-    detail: Dec. 2017
+    detail: Dec. 2017 (Expected)
     i18n: college_date
   job:
     detail: Student
