--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ author:
   email: 'XXXX.com'
   facebook_username: 'gauravnagar19'
   github_username: 'gauravnagar19'
+  linkedin_uername: 'gaurav-nagar'
   avatar: 'static/img/landing/gauravnagarphoto.jpg'
   desc: 'I am a Oracle Technical Consultant with data migration, reporting and scripting experience.'
 
