--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@ author:
   email: 'XXXX.com'
   facebook_username: 'gauravnagar19'
   github_username: 'gauravnagar19'
-  linkedin_uername: 'gaurav-nagar'
+  linkedin_username: 'gaurav-nagar'
   avatar: 'static/img/landing/gauravnagarphoto.jpg'
-  desc: 'I am a Oracle Technical Consultant with data migration, reporting and scripting experience.'
+  desc: 'I am Oracle Certified PL/SQL Developer with 3.8 years of Oracle Database/ERP experience at Capgemini India Pvt. Ltd. My primary task involved the development of BI reports and data migration (ETL) scripts using SQL and PL/SQL for the clients. I have also worked on customization of Oracle Web Pages using Java.'
 
 # comment
 changyan:
